--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
+    "react-dropzone": "^6.2.3",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.1",
-    "webpack-cli": "^2.0.10",
     "enzyme": "~2.9.1",
     "jasmine-ajax": "3.2.0",
     "jasmine-core": "~2.4.1",
@@ -24,7 +23,9 @@
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "2.0.1",
     "phantomjs-prebuilt": "~2.1.14",
-    "react-addons-test-utils": "~15.6.2"
+    "react-addons-test-utils": "~15.6.2",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
     "start": "./bin/webpack-dev-server",
