--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prop-types": "~15.6.0",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
+    "react-radio-group": "^3.0.3",
     "react-router": "~3.2.0",
     "redbox-react": "1.6.0"
   },
