--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dropzone": "^6.2.4",
     "react-radio-group": "^3.0.3",
     "react-router": "~3.2.0",
+    "react-star-rating-component": "^1.4.1",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
