--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
     "react-dropzone": "^6.2.4",
+    "react-native-star-rating": "^1.1.0",
     "react-radio-group": "^3.0.3",
     "react-router": "~3.2.0",
     "react-star-rating-component": "^1.4.1",
+    "react-star-ratings": "^2.3.0",
+    "react-stars": "^2.2.5",
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
